Added About Me and Projects

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     
@@ -37,7 +37,7 @@
           <h3>Computer Science Student</h3>
           <h6>I'm a high school student preparing for my career as a programmer!</p>
             <div class="buttons">
-              <button>Learn More About Me</button>
+              <a href=""><button>Learn More About Me</button></a>
               <button>See My Projects</button>
             </div>
         </div>
@@ -54,11 +54,11 @@
         <div class="CTABox">
           <div class="CTA">
             <div class="CTALeft">
-              <h3>Want to see how much I've grown?</h3>
-              <p>Click here to see my old website (and see how much different a year can make!)</p>
+              <h3>Want to contact me?</h3>
+              <p>This is a hypothetical space where I would link my social media and work email (Don't worry, it isn't here yet)!</p>
             </div>
             <div class="CTARight">
-              <button>View Old Website</button>
+              <button>Contact Me!</button>
             </div>
           </div>
         </div>
