Added final touches to About Me and Projects pages

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <h3>Computer Science Student</h3>
           <h6>I'm a high school student preparing for my career as a programmer!</p>
             <div class="buttons">
-              <a href=""><button>Learn More About Me</button></a>
-              <button>See My Projects</button>
+              <a href="about.html"><button>Learn More About Me</button></a>
+              <a href="projects.html"><button>See My Projects</button></a>
             </div>
         </div>
         <div class="introRight">
